fix(polls-list): Mainly changes in styles for the list page and moved Heatmap Button to the right to align with table actions column

--- a/src/app/features/list-poll-instances-by-filters/list-poll-instances-by-filters.component.scss
+++ b/src/app/features/list-poll-instances-by-filters/list-poll-instances-by-filters.component.scss
@@ -1,48 +1,64 @@
-.subtitle {
-    margin: 0px;
-    font-weight: 700;
-    padding: 0px 10px;
-    margin: 10px 0px;
-  }
-  
-  mat-form-field:not(:first-child),button:not(:first-child){
-    margin-left: 1em;
-  }
-  
-  .card-container {
-    padding: 0px 10px;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    display: grid;
-    gap: 10px;
-  }
-  
-  .row-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.form-container {
+  display: flex;
+  gap: 1em;
+  justify-content: space-between;
+  padding-bottom: 1em;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
     align-items: center;
+
+    mat-form-field {
+      flex: 1;
+      min-width: 250px;
+      max-width: 300px;
+    }
   }
-  
-  .field {
-    font-weight: 400;
-    margin: 5px 0px;
-  }
-  
-  .information {
-    font-weight: 550;
-    margin: 5px 0px;
-  }
-  
-  .no-data {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50%;
-  }
-  
-  .no-data-message {
-    font-size: 1.2em;
-    color: #757575;
-    text-align: center;
-  }
- 
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  flex-grow: 1;
+}
+
+.card-container {
+  padding: 0px 10px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  display: grid;
+  gap: 10px;
+}
+
+.table-header {
+  font-weight: bold;
+}
+
+.row-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.field {
+  font-weight: 450;
+  margin: 8px 0px;
+}
+
+.information {
+  font-weight: 500;
+  margin: 8px 0px;
+}
+
+.no-data {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+}
+
+.no-data-message {
+  font-size: 1.2em;
+  color: #757575;
+  text-align: center;
+}
